--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         <div class="flex items-center gap-4 flex-1 overflow-hidden">
             <!-- تكبير أيقونة القناة -->
             <div class="w-14 h-14 flex-shrink-0 rounded-2xl bg-white/10 overflow-hidden shadow-sm border border-white/10">
-                <img src="https://www.dropbox.com/scl/fi/pw360ns6lmih3gjvyynf1/4413204.png?rlkey=jw9xdcefhg4vcmm24lbxnvub2&st=wz6b0zuj&dl=1" alt="Icon" class="w-full h-full object-cover">
+                <!-- تم تصحيح الرابط باستخدام raw=1 لضمان العرض -->
+                <img src="https://www.dropbox.com/scl/fi/pw360ns6lmih3gjvyynf1/4413204.png?rlkey=jw9xdcefhg4vcmm24lbxnvub2&st=wz6b0zuj&raw=1" alt="Icon" class="w-full h-full object-cover">
             </div>
             <div class="flex flex-col">
                 <div class="notification-header">
@@ -232,7 +233,8 @@
         <!-- زر التليجرام الجانبي (مكبر) -->
         <a href="https://t.me/najaaf1" target="_blank" rel="noopener noreferrer" class="flex-shrink-0 bg-white/10 hover:bg-white/20 active:bg-white/30 text-white rounded-full p-3 transition-colors border border-white/5 shadow-lg group">
             <div class="bg-[#2AABEE] rounded-full p-2 shadow-sm group-hover:scale-110 transition-transform">
-                 <img src="https://www.dropbox.com/scl/fi/1xvlsfrfk88twdb4sc6d5/telegram-icone-icon.png?rlkey=aarpjchjfvqhh53rxoyurrsrc&st=hq3k3ibm&dl=1" class="w-6 h-6" alt="Join">
+                 <!-- تم تصحيح الرابط باستخدام raw=1 لضمان العرض -->
+                 <img src="https://www.dropbox.com/scl/fi/1xvlsfrfk88twdb4sc6d5/telegram-icone-icon.png?rlkey=aarpjchjfvqhh53rxoyurrsrc&st=hq3k3ibm&raw=1" class="w-6 h-6" alt="Join">
             </div>
         </a>
     </div>
