--- a/index.html
+++ b/index.html
@@ -200,28 +200,28 @@
             border: 2px dashed #3b82f6;
         }
 
-        /* FAB Button for QR */
+        /* FAB Button for QR - Modified to be Square Box */
         .qr-fab {
             position: fixed;
             bottom: 30px;
             right: 30px;
-            height: 54px; /* ارتفاع ثابت للشكل البيضاوي */
-            border-radius: 27px; /* نصف الارتفاع لجعل الحواف دائرية تماماً */
+            width: 75px;  /* عرض ثابت */
+            height: 75px; /* ارتفاع ثابت مساوي للعرض (مربع) */
+            border-radius: 22px; /* حواف دائرية ناعمة (Squircle) */
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             display: flex;
+            flex-direction: column; /* ترتيب عمودي للأيقونة والنص */
             align-items: center;
             justify-content: center;
-            padding: 0 22px; /* مساحة للنص */
-            gap: 12px; /* مسافة بين الأيقونة والنص */
+            padding: 0;
+            gap: 4px; /* مسافة صغيرة بين الأيقونة والنص */
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
             cursor: pointer;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: 90;
             color: white;
-            font-weight: 600;
-            font-size: 0.95rem;
         }
         .qr-fab:hover {
             background: rgba(255, 255, 255, 0.2);
@@ -230,6 +230,11 @@
         }
         .qr-fab:active {
             transform: scale(0.96);
+        }
+        .qr-fab span {
+            font-size: 0.65rem; /* خط صغير ليناسب المربع */
+            font-weight: 600;
+            white-space: nowrap;
         }
 
         /* QR Modal */
@@ -252,8 +257,10 @@
         }
         #qr-reader {
             width: 100%;
+            height: 100%;
             border-radius: 16px;
             overflow: hidden;
+            object-fit: cover;
         }
         /* Customizing html5-qrcode scanner */
         #qr-reader__scan_region {
@@ -278,23 +285,24 @@
         <div class="orb orb-3"></div>
     </div>
 
-    <!-- زر QR العائم (تم تحديثه مع نص) -->
+    <!-- زر QR العائم (تصميم مربع) -->
     <div class="qr-fab group" onclick="toggleQRScanner()" title="مسح رمز QR">
-        <i data-lucide="qr-code" class="w-6 h-6 text-white group-hover:scale-110 transition-transform"></i>
-        <span>ماسح الباركود</span>
+        <i data-lucide="qr-code" class="w-7 h-7 text-white group-hover:scale-110 transition-transform"></i>
+        <span>الماسح</span>
     </div>
 
     <!-- نافذة ماسح QR -->
     <div id="qr-modal">
         <div class="glass-panel p-6 w-full max-w-md relative mx-4 flex flex-col items-center">
             <!-- زر الإغلاق -->
-            <button onclick="toggleQRScanner()" class="absolute top-4 left-4 text-white/50 hover:text-white transition-colors">
+            <button onclick="toggleQRScanner()" class="absolute top-4 left-4 text-white/50 hover:text-white transition-colors z-10">
                 <i data-lucide="x" class="w-6 h-6"></i>
             </button>
             
             <h3 class="text-xl font-bold text-white mb-4 mt-2">ماسح الكود الذكي</h3>
             
-            <div class="w-full bg-black/30 rounded-2xl overflow-hidden border border-white/10 mb-4 relative h-64 flex items-center justify-center">
+            <!-- حاوية الكاميرا مربعة الشكل -->
+            <div class="w-full aspect-square bg-black/30 rounded-2xl overflow-hidden border border-white/10 mb-4 relative flex items-center justify-center">
                 <div id="qr-reader" class="w-full h-full"></div>
                 <!-- خط مسح متحرك -->
                 <div id="scan-line" class="absolute w-full h-0.5 bg-blue-500 top-0 left-0 shadow-[0_0_10px_#3b82f6] animate-[scan_2s_infinite_linear] hidden"></div>
